--- a/src/App.css
+++ b/src/App.css
@@ -18,4 +18,6 @@ input
 {
   width: 100%;
   height: 26px;
-  background-color: dark
+  background-color: darkblue;
+  text-align: left;
+  padding-top: 3px;
