Fix a typo in documentation

--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,6 @@ input
   padding-top: 3px;
   padding-left: 6px;
   color: #FFFFFF;
-  fo
+  font-size: 12px;
+  font-weight: 800;
+  box-sizing: bord
