--- a/src/components/ChatMessageList/ChatMessageList.css
+++ b/src/components/ChatMessageList/ChatMessageList.css
@@ -12,4 +12,10 @@
 	height: 24px;
 	background-color: deepskyblue;
 	padding: 4px 3px;
-	box-sizing: border-box
+	box-sizing: border-box;
+	font-size: 10px;
+}
+
+.LoadMreDiv
+{
+	height: 30p
