--- a/src/components/ChatMessageList/ChatMessageList.css
+++ b/src/components/ChatMessageList/ChatMessageList.css
@@ -57,4 +57,6 @@
 	text-align: left;
 	width: 100%;
 	height: 36px;
-	background-co
+	background-color: paleturquoise;
+	padding: 9px 3px 4px 9px;
+	box-s
