--- a/src/components/PopupComponent/PopupComponent.css
+++ b/src/components/PopupComponent/PopupComponent.css
@@ -4,4 +4,5 @@
 	position: fixed;
 	top: 50%;
 	left: 50%;
-	transform: translate
+	transform: translate(-50%, -50%);
+	background-color: rgba(255, 255
