--- a/src/components/PopupComponent/PopupComponent.css
+++ b/src/components/PopupComponent/PopupComponent.css
@@ -5,4 +5,5 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: rgba(255, 255
+	background-color: rgba(255, 255, 255, 0.95);
+	width: 300px; /* Adjust the width as
