--- a/src/components/PopupComponent/PopupComponent.css
+++ b/src/components/PopupComponent/PopupComponent.css
@@ -6,4 +6,6 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	background-color: rgba(255, 255, 255, 0.95);
-	width: 300px; /* Adjust the width as
+	width: 300px; /* Adjust the width as needed */
+	height: 200px;
+	padding: 10px;
