--- a/src/components/PopupComponent/PopupComponent.css
+++ b/src/components/PopupComponent/PopupComponent.css
@@ -9,3 +9,6 @@
 	width: 300px; /* Adjust the width as needed */
 	height: 200px;
 	padding: 10px;
+	/*text-align: center;*/
+	border-radius: 4px;
+	/*dis
