--- a/src/components/PopupComponent/PopupComponent.css
+++ b/src/components/PopupComponent/PopupComponent.css
@@ -15,4 +15,8 @@
 	z-index: 999;
 
 	border: 1px solid #3498db;
-	box-shadow: 0 2px 10px rgba(0, 0, 
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.popup-content {
+	color: #3333
