--- a/src/components/RoomList/RoomList.css
+++ b/src/components/RoomList/RoomList.css
@@ -26,4 +26,8 @@
 	box-sizing: border-box;
 	font-weight: normal;
 	font-size: 11px;
-	text-align: ce
+	text-align: center;
+}
+.RoomListDiv .listContainer
+{
+	min-
