Update 4 - Installations.md

--- a/src/components/RoomList/RoomList.css
+++ b/src/components/RoomList/RoomList.css
@@ -31,4 +31,6 @@
 .RoomListDiv .listContainer
 {
 	min-height: calc( 100vh - 50px );
-	background
+	background-color: paleturquoise;
+	padding: 0;
+	margin
