--- a/src/components/RoomList/RoomList.css
+++ b/src/components/RoomList/RoomList.css
@@ -35,4 +35,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-weight: 
+	font-weight: normal;
+	font-size: 11px;
+}
+.RoomListDiv .listC
