f2fs: avoid unnecessary f2fs_gc for dir operations

--- a/src/components/RoomList/RoomList.css
+++ b/src/components/RoomList/RoomList.css
@@ -40,4 +40,5 @@
 }
 .RoomListDiv .listContainer .roomItem
 {
-	background-color: pale
+	background-color: paleturquoise;
+	border-bottom: 1px solid
