--- a/src/components/RoomList/RoomList.css
+++ b/src/components/RoomList/RoomList.css
@@ -41,4 +41,7 @@
 .RoomListDiv .listContainer .roomItem
 {
 	background-color: paleturquoise;
-	border-bottom: 1px solid
+	border-bottom: 1px solid #3498db;
+	padding: 6px;
+	width: 100%;
+	cursor: 
