--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoot
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-fam
